// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a grafana instance defaults 1`] = `
Array [
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "Grafana",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-c8153986",
    },
    "spec": Object {
      "baseImage": "public.ecr.aws/ubuntu/grafana:latest",
      "client": Object {
        "preferService": true,
      },
      "config": Object {
        "auth.anonymous": Object {
          "enabled": true,
        },
        "log": Object {
          "level": "info",
          "mode": "console",
        },
        "security": Object {
          "admin_password": "secret",
          "admin_user": "root",
        },
      },
      "dashboardLabelSelector": Array [
        Object {
          "matchLabels": Object {
            "app": "grafana",
          },
        },
      ],
      "deployment": Object {
        "labels": Object {
          "app": "grafana",
        },
      },
      "ingress": Object {
        "enabled": true,
      },
    },
  },
]
`;

exports[`a grafana instance labels are inherited by dashboards and data sources 1`] = `
Array [
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "Grafana",
    "metadata": Object {
      "labels": Object {
        "stage": "prod",
      },
      "name": "test-my-grafana-c8153986",
    },
    "spec": Object {
      "baseImage": "public.ecr.aws/ubuntu/grafana:latest",
      "client": Object {
        "preferService": true,
      },
      "config": Object {
        "auth.anonymous": Object {
          "enabled": true,
        },
        "log": Object {
          "level": "info",
          "mode": "console",
        },
        "security": Object {
          "admin_password": "secret",
          "admin_user": "root",
        },
      },
      "dashboardLabelSelector": Array [
        Object {
          "matchLabels": Object {
            "stage": "prod",
          },
        },
      ],
      "deployment": Object {
        "labels": Object {
          "stage": "prod",
        },
      },
      "ingress": Object {
        "enabled": true,
      },
    },
  },
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "GrafanaDashboard",
    "metadata": Object {
      "labels": Object {
        "stage": "prod",
      },
      "name": "test-my-grafana-my-dashboard-c83fc47b",
    },
    "spec": Object {
      "datasources": Array [],
      "json": "{
  \\"title\\": \\"My Dashboard\\",
  \\"id\\": null,
  \\"tags\\": [],
  \\"style\\": \\"dark\\",
  \\"timezone\\": \\"browser\\",
  \\"editable\\": true,
  \\"hideControls\\": false,
  \\"graphTooltip\\": 1,
  \\"panels\\": [],
  \\"time\\": {
    \\"from\\": \\"now-21600s\\",
    \\"to\\": \\"now\\"
  },
  \\"timepicker\\": {
    \\"time_options\\": [],
    \\"refresh_intervals\\": []
  },
  \\"templating\\": {
    \\"list\\": []
  },
  \\"annotations\\": {
    \\"list\\": []
  },
  \\"refresh\\": \\"5s\\",
  \\"schemaVersion\\": 17,
  \\"version\\": 0,
  \\"links\\": []
}",
      "name": "my-dashboard",
      "plugins": Array [],
    },
  },
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "GrafanaDataSource",
    "metadata": Object {
      "labels": Object {
        "stage": "prod",
      },
      "name": "test-my-grafana-prometheus-c8a66b3d",
    },
    "spec": Object {
      "datasources": Array [
        Object {
          "access": "proxy",
          "name": "Prometheus",
          "type": "prometheus",
          "url": "http://prometheus-service:9090",
        },
      ],
      "name": "Prometheus",
    },
  },
]
`;

exports[`a grafana instance with a dashboard expecting a data source variable 1`] = `
Array [
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "Grafana",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-c8153986",
    },
    "spec": Object {
      "baseImage": "public.ecr.aws/ubuntu/grafana:latest",
      "client": Object {
        "preferService": true,
      },
      "config": Object {
        "auth.anonymous": Object {
          "enabled": true,
        },
        "log": Object {
          "level": "info",
          "mode": "console",
        },
        "security": Object {
          "admin_password": "secret",
          "admin_user": "root",
        },
      },
      "dashboardLabelSelector": Array [
        Object {
          "matchLabels": Object {
            "app": "grafana",
          },
        },
      ],
      "deployment": Object {
        "labels": Object {
          "app": "grafana",
        },
      },
      "ingress": Object {
        "enabled": true,
      },
    },
  },
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "GrafanaDataSource",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-prometheus-c8a66b3d",
    },
    "spec": Object {
      "datasources": Array [
        Object {
          "access": "proxy",
          "name": "Prometheus",
          "type": "prometheus",
          "url": "http://prometheus-service:9090",
        },
      ],
      "name": "Prometheus",
    },
  },
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "GrafanaDashboard",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-my-dashboard-c83fc47b",
    },
    "spec": Object {
      "customFolderName": "special-dashboards",
      "datasources": Array [
        Object {
          "datasourceName": "Prometheus",
          "inputName": "DS_PROMETHEUS",
        },
      ],
      "json": "{
  \\"title\\": \\"My Dashboard\\",
  \\"id\\": null,
  \\"tags\\": [],
  \\"style\\": \\"dark\\",
  \\"timezone\\": \\"browser\\",
  \\"editable\\": true,
  \\"hideControls\\": false,
  \\"graphTooltip\\": 1,
  \\"panels\\": [],
  \\"time\\": {
    \\"from\\": \\"now-21600s\\",
    \\"to\\": \\"now\\"
  },
  \\"timepicker\\": {
    \\"time_options\\": [],
    \\"refresh_intervals\\": []
  },
  \\"templating\\": {
    \\"list\\": []
  },
  \\"annotations\\": {
    \\"list\\": []
  },
  \\"refresh\\": \\"10s\\",
  \\"schemaVersion\\": 17,
  \\"version\\": 0,
  \\"links\\": [],
  \\"__inputs\\": [
    {
      \\"name\\": \\"DS_PROMETHEUS\\",
      \\"label\\": \\"Prometheus\\",
      \\"description\\": \\"\\",
      \\"type\\": \\"datasource\\",
      \\"pluginId\\": \\"prometheus\\",
      \\"pluginName\\": \\"Prometheus\\"
    }
  ]
}",
      "name": "my-dashboard",
      "plugins": Array [],
    },
  },
]
`;

exports[`a grafana instance with customized auth 1`] = `
Array [
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "Grafana",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-c8153986",
    },
    "spec": Object {
      "baseImage": "public.ecr.aws/ubuntu/grafana:latest",
      "client": Object {
        "preferService": true,
      },
      "config": Object {
        "auth.anonymous": Object {
          "enabled": false,
        },
        "log": Object {
          "level": "info",
          "mode": "console",
        },
        "security": Object {
          "admin_password": "this-is-a-bad-password",
          "admin_user": "admin",
        },
      },
      "dashboardLabelSelector": Array [
        Object {
          "matchLabels": Object {
            "app": "grafana",
          },
        },
      ],
      "deployment": Object {
        "labels": Object {
          "app": "grafana",
        },
      },
      "ingress": Object {
        "enabled": true,
      },
    },
  },
]
`;

exports[`a grafana instance with data source and customized dashboard 1`] = `
Array [
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "Grafana",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-c8153986",
    },
    "spec": Object {
      "baseImage": "public.ecr.aws/ubuntu/grafana:latest",
      "client": Object {
        "preferService": true,
      },
      "config": Object {
        "auth.anonymous": Object {
          "enabled": true,
        },
        "log": Object {
          "level": "info",
          "mode": "console",
        },
        "security": Object {
          "admin_password": "secret",
          "admin_user": "root",
        },
      },
      "dashboardLabelSelector": Array [
        Object {
          "matchLabels": Object {
            "app": "grafana",
          },
        },
      ],
      "deployment": Object {
        "labels": Object {
          "app": "grafana",
        },
      },
      "ingress": Object {
        "enabled": true,
      },
    },
  },
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "GrafanaDataSource",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-datasource-c8bd3b25",
    },
    "spec": Object {
      "datasources": Array [
        Object {
          "access": "proxy",
          "name": "Prometheus",
          "type": "prometheus",
          "url": "http://prometheus-service:9090",
        },
      ],
      "name": "Prometheus",
    },
  },
  Object {
    "apiVersion": "integreatly.org/v1alpha1",
    "kind": "GrafanaDashboard",
    "metadata": Object {
      "labels": Object {
        "app": "grafana",
      },
      "name": "test-my-grafana-my-dashboard-c83fc47b",
    },
    "spec": Object {
      "customFolderName": "special-dashboards",
      "datasources": Array [],
      "json": "{
  \\"title\\": \\"My Dashboard\\",
  \\"id\\": null,
  \\"tags\\": [],
  \\"style\\": \\"dark\\",
  \\"timezone\\": \\"browser\\",
  \\"editable\\": true,
  \\"hideControls\\": true,
  \\"graphTooltip\\": 1,
  \\"panels\\": [
    {
      \\"type\\": \\"text\\",
      \\"title\\": \\"Panel Title\\",
      \\"gridPos\\": {
        \\"x\\": 0,
        \\"y\\": 0,
        \\"w\\": 12,
        \\"h\\": 9
      },
      \\"mode\\": \\"markdown\\",
      \\"content\\": \\"# title\\"
    }
  ],
  \\"time\\": {
    \\"from\\": \\"now-21600s\\",
    \\"to\\": \\"now\\"
  },
  \\"timepicker\\": {
    \\"time_options\\": [],
    \\"refresh_intervals\\": []
  },
  \\"templating\\": {
    \\"list\\": []
  },
  \\"annotations\\": {
    \\"list\\": []
  },
  \\"refresh\\": \\"10s\\",
  \\"schemaVersion\\": 17,
  \\"version\\": 0,
  \\"links\\": []
}",
      "name": "my-dashboard",
      "plugins": Array [],
    },
  },
]
`;
